syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto.dtos.evento_externo";

package proto.dtos;

import "google/protobuf/timestamp.proto";
import "dtos/usuario_dto.proto";

message EventoExternoProto {
    int64 idEventoOrigen = 1;
	int64 idEventoExterno = 2;
	string nombre = 3;
	string descripcion = 4;
	google.protobuf.Timestamp fechaHora = 5;
	string idOrganizacion = 6;
	repeated MiembroProto participantesInternos = 7;
}
